test/input/invalid/function_2.js
function arguments() {
}

function eval() {
    "use strict";
}
